--- a/1.1_using_jupyter/using_jupyter_(need).ipynb
+++ b/1.1_using_jupyter/using_jupyter_(need).ipynb
@@ -1,1 +1,346 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Getting ready"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Getting started with Jupyter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.1 It is all about running cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.2 A traditional start"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 All about Markdown"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.1 Rendering Markdown cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.2 Some basic syntax"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.3 Headings"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.4 Displaying Code"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.5 Links"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.6 Images"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.7 Tables"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.8 Lists"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.9 Equations"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0994af38",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "227a5d6b",
+   "metadata": {},
+   "source": [
+    "# 1 Getting ready"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1479fefd",
+   "metadata": {},
+   "source": [
+    "# 2 Getting started with Jupyter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8191a469",
+   "metadata": {},
+   "source": [
+    "## 2.1 It is all about running cells"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e0cd019f",
+   "metadata": {},
+   "source": [
+    "## 2.2 A traditional start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a57b42d1-1327-4748-bdda-54f095c66f99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d13160b7",
+   "metadata": {},
+   "source": [
+    "# 3 All about Markdown"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e21aca4e",
+   "metadata": {},
+   "source": [
+    "## 3.1 Rendering Markdown cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb126ea-b1db-4a9e-8a87-ff327232c8a8",
+   "metadata": {},
+   "source": [
+    "The ships hung in the sky in much the same way that bricks don't."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "893c1182",
+   "metadata": {},
+   "source": [
+    "## 3.2 Some basic syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfba314d-b183-487e-88b6-764c1ab91740",
+   "metadata": {},
+   "source": [
+    "The ships *hung in the sky* in much the same way that **bricks don't**.**<sup>1</sup><sub>QUOTE</sub>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "887ebd70",
+   "metadata": {},
+   "source": [
+    "## 3.3 Headings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7129fa07-8890-4186-8bac-dd33f41274f8",
+   "metadata": {},
+   "source": [
+    "#largest heading<br>####smallest heading"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "25c2d3f6",
+   "metadata": {},
+   "source": [
+    "## 3.4 Displaying Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99d8b7e0-4144-4e5f-8afc-49a60c79de06",
+   "metadata": {},
+   "source": [
+    "`print(\"Hello World!\")`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b414e9-7443-4d41-beba-46a882978348",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "print(\"Hello World!\")\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bb693623",
+   "metadata": {},
+   "source": [
+    "## 3.5 Links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d41c4aa5-bd8b-4395-ab39-b9ca984319ee",
+   "metadata": {},
+   "source": [
+    "[SP2273 Website](https://sps.nus.edu.sg/sp2273)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c7d0cfdd",
+   "metadata": {},
+   "source": [
+    "## 3.6 Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0ee8de-9761-4733-a8b7-34e48cf7bcbc",
+   "metadata": {},
+   "source": [
+    "![](https://nus.edu.sg/images/default-source/base/logo.png)![](https://nus.edu.sg/images/default-source/base/logo.png)![](https://nus.edu.sg/images/default-source/base/logo.png)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ad2ea165",
+   "metadata": {},
+   "source": [
+    "## 3.7 Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e23793b-a9fc-4e1a-bdef-2eb25ca3b0f1",
+   "metadata": {},
+   "source": [
+    "| A    |  B   |    C |\n",
+    "| :--- | :--: | ---: |\n",
+    "| a1   |  b1  |   c1 |\n",
+    "| a2   |  b2  |   c2 |\n",
+    "| a3   |  b3  |   c3 |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c83419b",
+   "metadata": {},
+   "source": [
+    "## 3.8 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f25eaf3-adf3-4a6a-a4f0-991051aaa84c",
+   "metadata": {},
+   "source": [
+    "1. Master Yoda\n",
+    "1. Luke Skywalker\n",
+    "1. Anakin Skywalker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8663380d-7327-4f21-94d4-36be0988afea",
+   "metadata": {},
+   "source": [
+    "- Master Yoda\n",
+    "- Luke Skywalker\n",
+    "- Anakin Skywalker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28aa4f88-845e-4e84-915f-f5099021349a",
+   "metadata": {},
+   "source": [
+    "1. Master Yoda\n",
+    "   1. Was a Jedi\n",
+    "   1. Was a bit green\n",
+    "1. Luke Skywalker\n",
+    "   1. Was a Jedi\n",
+    "   1. Is Anakin's son.\n",
+    "1. Anakin Skywalker\n",
+    "   1. Was a Jedi then became a baddie\n",
+    "   1. Is famous for saying 'Luke, I am your father'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08e8966-f6d3-4a77-851d-4d85ab854406",
+   "metadata": {},
+   "source": [
+    "Master Yoda\n",
+    "   - Was a Jedi\n",
+    "   - Was a bit green\n",
+    "1. Luke Skywalker\n",
+    "   - Was a Jedi\n",
+    "   - Is Anakin's son.\n",
+    "1. Anakin Skywalker\n",
+    "   - Was a Jedi then, became a baddie\n",
+    "   - Is famous for saying, _'Luke, I am your father'_."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "41ffc81e",
+   "metadata": {},
+   "source": [
+    "## 3.9 Equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8649c258-bbae-45ac-9be5-05852c37ec87",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x = \\dfrac{-b \\pm \\sqrt{b^2-4ac}}{2a}\n",
+    "$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5de7cad5",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
