--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -122,7 +122,7 @@
    "id": "02ab2682-31de-4619-88f9-301e8081a51c",
    "metadata": {},
    "source": [
-    "## 2 Exercise 2 (In Your Own Words) In your own words, use a Markdown cell to answer the following question."
+    "## 2 Exercise 2 (In Your Own Words)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "b1b7f599-b760-4eb9-af7f-f68d4508052d",
    "metadata": {},
    "source": [
-    "What is a Git **repository**?<br>"
+    "What is a Git **repository**?<br>A Git repository is "
    ]
   },
   {
@@ -179,6 +179,36 @@
    "metadata": {},
    "source": [
     "## 3 Exercise 3 (A Matter of Statistics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c6c53f-5583-47d1-bd11-d424281d8999",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mu = \\frac{1}{n}\\sum_{i=1}^n x_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cd9ed46-2264-44c4-967d-a828db0c32e6",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\sigma = \\sqrt{\\frac{1}{n}\\sum_{i=1}^n (x_i - \\mu)^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d57fa50-6336-4ef9-9fbf-25c09ccace33",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "r = \\frac{\\sum_{i=1}^{n}(x_i - \\mu_X)(y_i - \\mu_Y)}{\\sqrt{\\sum_{i=1}^{n}(x_i - \\mu_X)^2\\sum_{i=1}^{n}(y_i - \\mu_Y)^2}}\n",
+    "$$"
    ]
   }
  ],
