completed until 2.2 (good) except 2.2 exercise 3
completed compulsory exercises until 2.2 fundamentals (good) except 2.2 exercise 3

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -130,7 +130,7 @@
    "id": "b1b7f599-b760-4eb9-af7f-f68d4508052d",
    "metadata": {},
    "source": [
-    "What is a Git **repository**?<br>A Git repository is "
+    "What is a Git **repository**?<br>A Git repository is a project folder in Github that contains all the files in the project, and can keep track of changes made and different versions of the project."
    ]
   },
   {
@@ -138,7 +138,7 @@
    "id": "d18a53bc-e94f-49df-9405-299fe0e7cb9a",
    "metadata": {},
    "source": [
-    "Git keeps track of ____BLANK____ in the files in our repository."
+    "Git keeps track of <u>_changes_</u> in the files in our repository."
    ]
   },
   {
@@ -146,7 +146,7 @@
    "id": "2b594edb-9670-4a7b-8518-3d68fd017876",
    "metadata": {},
    "source": [
-    "What is a **commit**?"
+    "What is a **commit**?<br>A commit is an action to allow selected changes that a user has made to be saved in the local Git repository. Each commit also includes a brief description of these changes."
    ]
   },
   {
@@ -154,7 +154,7 @@
    "id": "5534d1d4-d3d5-436f-8643-e77b9abb8ee5",
    "metadata": {},
    "source": [
-    "What is a **push**?"
+    "What is a **push**?<br>A push is a command that sends commits from a local repository to the shared remote repository, making them available to other collaborators."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "id": "c997c54d-2710-41cb-9783-b3ba0b727861",
    "metadata": {},
    "source": [
-    "What is a **pull**?"
+    "What is a **pull**?<br>A pull is a command that fetches changes from the shared remote repository and then incorporates them into the local repository."
    ]
   },
   {
@@ -170,7 +170,7 @@
    "id": "3c249d4c-6e15-4606-9a60-703a136b872c",
    "metadata": {},
    "source": [
-    "What is the difference between **GitHub** and **GitHub Desktop**?"
+    "What is the difference between **GitHub** and **GitHub Desktop**?<br>Github is an online platform that stores and shares repositories, and is accessed by typing commands in the terminal. Github Desktop is the desktop application that provides a user interface for Github, making it easier to use as it does not need the command line."
    ]
   },
   {
