--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -77,17 +77,17 @@
    "metadata": {},
    "source": [
     "|#|Term|Description|\n",
-    "|:---|:---|:---:|\n",
-    "|1|Function||\n",
-    "|2|Arguments||\n",
-    "|3|Comments||\n",
-    "|4|Indentations||\n",
-    "|5|Packages||\n",
-    "|6|.||\n",
-    "|7|:||\n",
-    "|8|||\n",
-    "|9|||\n",
-    "|10|||"
+    "|:---|:---|:---|\n",
+    "|1|Function|A block of code that can be called to perform a specific task.|\n",
+    "|2|Arguments|A value that a function takes in when it is called, which is assigned to the function's parameters.|\n",
+    "|3|Comments|Notes among the code indicated by '#', that are ignored by Python when executing the code.|\n",
+    "|4|Indentations|Spaces or tabs at the start of a line of code, to define a block of code.|\n",
+    "|5|Packages|Contain modules that have diverse functions beyond the standard ones in Python.|\n",
+    "|6|`.`|Used to access attributes of an object.|\n",
+    "|7|`:`|Indicates the start of an indented block of code.|\n",
+    "|8|`[]`|Square brackets define a list, a null list in this case.|\n",
+    "|9|`[[],[]]`|A nested list, in this case a list containing 2 null lists.|\n",
+    "|10|`{}`|Defines a dictionary.|"
    ]
   },
   {
