--- a/1.1_using_jupyter/using_jupyter_(good).ipynb
+++ b/1.1_using_jupyter/using_jupyter_(good).ipynb
@@ -12,7 +12,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "9b6f68e6",
    "metadata": {},
    "source": [
     "# What to expect in this chapter"
@@ -21,7 +21,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "58c17343",
    "metadata": {},
    "source": [
     "# 1 Some tips and tricks"
@@ -30,7 +30,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "38976066",
    "metadata": {},
    "source": [
     "## 1.1 Keyboard Shortcuts"
@@ -39,27 +39,16 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "3c58dd3d",
    "metadata": {},
    "source": [
     "### Things to note"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "123456",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Your code here\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "878e8b3f",
    "metadata": {},
    "source": [
     "## 1.2 Shell commands"
@@ -67,25 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2b40a677",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The system cannot find the path specified.\n"
+      "c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n"
      ]
     }
    ],
    "source": [
-    "!cd    # print the current working directory"
+    "!cd\n",
+    "# print the current working directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "dfa03251",
    "metadata": {},
    "outputs": [
@@ -98,48 +88,25 @@
       "\n",
       " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
       "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n",
-      "\n",
-      " Directory of c:\\Users\\Li Hauyu Amy\\Desktop\\learning-portfolio-a-m-y-y-y\\1.1_using_jupyter\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "File Not Found\n"
+      "17/08/2025  08:56 pm    <DIR>          .\n",
+      "16/08/2025  10:22 pm    <DIR>          ..\n",
+      "17/08/2025  08:17 pm    <DIR>          .ipynb_checkpoints\n",
+      "28/08/2025  09:35 am             4,862 using_jupyter_(good).ipynb\n",
+      "17/08/2025  08:56 pm             7,053 using_jupyter_(need).ipynb\n",
+      "               2 File(s)         11,915 bytes\n",
+      "               3 Dir(s)  394,099,277,824 bytes free\n"
      ]
     }
    ],
    "source": [
-    "!dir   # list of all the files in your folder"
+    "!dir\n",
+    "# list of all the files in your folder"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "1ec2325b",
    "metadata": {},
    "source": [
     "# 2 Install Notebook 7"
@@ -148,7 +115,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "f35e5f3f",
    "metadata": {},
    "source": [
     "# Jupyter Extensions"
@@ -157,7 +124,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "35adb2ad",
    "metadata": {},
    "source": [
     "## Installing the extensions"
@@ -166,7 +133,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "0dbb48cf",
    "metadata": {},
    "source": [
     "## Enabling the extensions"
@@ -175,16 +142,56 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "3600bc12",
    "metadata": {},
    "source": [
     "# 3 Shell Magic"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "44503210-0eab-4769-b0f9-305a24782ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.7 ns ± 0.194 ns per loop (mean ± std. dev. of 7 runs, 100,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# line magic\n",
+    "%timeit x=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9b7eb58a-dd53-480c-888b-f23974738efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.3 ns ± 1.2 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "x=10\n",
+    "y=10\n",
+    "z=10"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "123456",
+   "id": "1ecc34a3",
    "metadata": {},
    "source": [
     "# 4 The Kernel"
