--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -22,7 +22,7 @@
    "id": "a8510282",
    "metadata": {},
    "source": [
-    "## Task 1"
+    "### Task 1"
    ]
   },
   {
@@ -49,23 +49,58 @@
    "id": "69d8ce13",
    "metadata": {},
    "source": [
-    "## Task 2"
+    "### Task 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1145e8df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is amy and I am 19 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"what's your name? \")\n",
+    "age = input(\"how old are you? \")\n",
+    "print(f\"My name is {name} and I am {age} years old.\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6782332e",
    "metadata": {},
    "source": [
-    "## Task 3"
+    "### Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5be0acbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of pi to 2 decimal places is: 3.14\n",
+      "The value of pi to 2 decimal places is: 3.142\n",
+      "The value of pi to 2 decimal places is: 3.1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.141592653589793\n",
+    "print(f\"The value of pi to 2 decimal places is: {pi:.2f}\")\n",
+    "print(f\"The value of pi to 2 decimal places is: {pi:.3f}\")\n",
+    "print(f\"The value of pi to 2 decimal places is: {pi:.4f}\")"
    ]
   },
   {
@@ -73,7 +108,36 @@
    "id": "eaf97f0a",
    "metadata": {},
    "source": [
-    "## Task 4"
+    "### Task 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e57632b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple      $ 0.99\n",
+      "Banana     $ 0.59\n",
+      "Orange     $ 1.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = {\n",
+    "    \"Apple\": 0.99,\n",
+    "    \"Banana\": 0.59,\n",
+    "    \"Orange\": 1.29\n",
+    "}\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    print(f\"{fruit:10} $ {fruits[fruit]}\")\n",
+    "\n",
+    "#print(\"********** $*****\")"
    ]
   },
   {
@@ -81,7 +145,48 @@
    "id": "6cd28c39",
    "metadata": {},
    "source": [
-    "# Exercise 2"
+    "# Exercise 2 (What is your grade?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7958a32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score: 100\n",
+      "The student's letter grade is: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "def grading(score):\n",
+    "    if score>=70:\n",
+    "        grade = \"A\"\n",
+    "    elif score>=50:\n",
+    "        grade = \"B\"\n",
+    "    elif score>=35:\n",
+    "        grade = \"C\"\n",
+    "    else:\n",
+    "        grade = \"D\"\n",
+    "    return(grade)\n",
+    "\n",
+    "student_score = input(\"Enter the student's score: \")\n",
+    "print(f\"Enter the student's score: {student_score}\")\n",
+    "\n",
+    "try:\n",
+    "    student_score = float(student_score)\n",
+    "    if student_score>100 or student_score<0:\n",
+    "        print(\"The score must be within the range 0-100!\")\n",
+    "    else:\n",
+    "        student_grade = grading(student_score)\n",
+    "        print(f\"The student's letter grade is: {student_grade}\")\n",
+    "except ValueError:\n",
+    "    print(\"The score must be a number!\")"
    ]
   },
   {
@@ -89,17 +194,39 @@
    "id": "acd109fd",
    "metadata": {},
    "source": [
-    "# Exercise 3"
+    "# Exercise 3 (Debugging Code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "88dcc24c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"hi\")"
+    "def factorial(n):\n",
+    "    if n > 0:\n",
+    "        return \"Invalid input\"\n",
+    "    elif n != 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result += number\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "print(factorial(5))   # Testing, expected output: 120\n",
+    "print(factorial(-1))  # Testing, expected output: Invalid input"
    ]
   }
  ],
