completed all compulsory stuff until 2.2 (good)
2.2 fundamentals (good) :)

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "7958a32b",
    "metadata": {},
    "outputs": [
@@ -164,27 +164,21 @@
     }
    ],
    "source": [
-    "def grading(score):\n",
-    "    if score>=70:\n",
-    "        grade = \"A\"\n",
-    "    elif score>=50:\n",
-    "        grade = \"B\"\n",
-    "    elif score>=35:\n",
-    "        grade = \"C\"\n",
-    "    else:\n",
-    "        grade = \"D\"\n",
-    "    return(grade)\n",
-    "\n",
-    "student_score = input(\"Enter the student's score: \")\n",
-    "print(f\"Enter the student's score: {student_score}\")\n",
+    "score = input(\"Enter the student's score: \")\n",
+    "print(f\"Enter the student's score: {score}\")\n",
     "\n",
     "try:\n",
-    "    student_score = float(student_score)\n",
-    "    if student_score>100 or student_score<0:\n",
+    "    score = float(score)\n",
+    "    if score<0 or score>100:\n",
     "        print(\"The score must be within the range 0-100!\")\n",
+    "    elif score>=70:\n",
+    "        print(\"The student's letter grade is: A\")\n",
+    "    elif score>=50:\n",
+    "        print(\"The student's letter grade is: B\")\n",
+    "    elif score>=35:\n",
+    "        print(\"The student's letter grade is: C\")\n",
     "    else:\n",
-    "        student_grade = grading(student_score)\n",
-    "        print(f\"The student's letter grade is: {student_grade}\")\n",
+    "        print(\"The student's grade is: Fail\")\n",
     "except ValueError:\n",
     "    print(\"The score must be a number!\")"
    ]
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "88dcc24c",
    "metadata": {},
    "outputs": [
@@ -207,22 +201,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input\n",
-      "1\n"
+      "120\n",
+      "Invalid input\n"
      ]
     }
    ],
    "source": [
     "def factorial(n):\n",
     "    if n > 0:\n",
-    "        return \"Invalid input\"\n",
-    "    elif n != 0:\n",
-    "        return 1\n",
-    "    else:\n",
     "        result = 1\n",
     "        for number in range(1, n+1):\n",
-    "            result += number\n",
+    "            result *= number\n",
     "        return result\n",
+    "    elif n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return \"Invalid input\"\n",
     "\n",
     "\n",
     "print(factorial(5))   # Testing, expected output: 120\n",
